raffia/tests/error/scss/at-rule/extend/compound_selector.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `:` received
  ┌─ compound_selector.scss:2:12
  │
2 │   @extend a:hover;
  │            ^


